force-app/main/default/objects/Section_Field__mdt/Section_Field__mdt.object-meta.xml
<CustomObject>
    <label>Section Field</label>
    <pluralLabel>Section Field</pluralLabel>
</CustomObject>