force-app/main/default/objects/Section_Field__mdt/fields/Data_Type__c.field-meta.xml
<CustomField>
    <fullName>Data_Type__c</fullName>
    <label>Data Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Date</fullName>
                <default>true</default>
                <label>Date</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>