force-app/main/default/objects/Section_Field__mdt/fields/Form_Section__c.field-meta.xml
<CustomField>
    <fullName>Form_Section__c</fullName>
    <label>Form Section</label>
    <referenceTo>Form_Section__mdt</referenceTo>
    <relationshipLabel>Section Field</relationshipLabel>
    <relationshipName>Section_Field</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>