force-app/main/default/objects/Section_Field__mdt/fields/is_Ready_Only__c.field-meta.xml
<CustomField>
    <fullName>is_Ready_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Ready Only?</label>
    <type>Checkbox</type>
</CustomField>