force-app/main/default/objects/Section_Field__mdt/fields/is_Required__c.field-meta.xml
<CustomField>
    <fullName>is_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Required?</label>
    <type>Checkbox</type>
</CustomField>