force-app/main/default/objects/Section_Field__mdt/fields/Show_Filter_Condition__c.field-meta.xml
<CustomField>
    <fullName>Show_Filter_Condition__c</fullName>
    <label>Show Filter Condition</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>