force-app/main/default/objects/Section_Field__mdt/fields/Show_Filter_Condition_Old__c.field-meta.xml
<CustomField>
    <fullName>Show_Filter_Condition_Old__c</fullName>
    <label>Show Filter Condition Old</label>
    <type>TextArea</type>
</CustomField>