force-app/main/default/objects/Section_Field__mdt/fields/Sort_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order_Number__c</fullName>
    <label>Sort Order Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>